--- a/html5/style.css
+++ b/html5/style.css
@@ -1,14 +1,17 @@
 *
 {
+    border: 0;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+html, body, #input
+{
     padding: 0;
     margin: 0;
     font-family: "Eagle Lake", Georgia, sans;
     color: #3e3223;
     background-color: #b6d6b6;
-    border: 0;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
 }
 
 .fadeIn
@@ -26,9 +29,16 @@
     margin-left: 1em;
 }
 
-#output
+#chat
 {
-    width: 95%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: right;
+}
+
+#news, #chat
+{
     overflow-y: scroll;
     transition: opacity 3s ease;
 }
@@ -40,7 +50,7 @@
         font-size: 8pt;
     }
 
-    #output
+    #news
     {
         padding: 0.5em;
     }
@@ -53,7 +63,7 @@
         font-size: 12pt;
     }
 
-    #output
+    #news
     {
         padding: 3em;
     }
