--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+
 html, body, #input
 {
     padding: 0;
@@ -41,9 +42,19 @@ html, body, #input
 {
     overflow-y: scroll;
 }
-#news>div, #chat>div
+
+    #news > div, #chat > div
+    {
+        transition: opacity 3s ease;
+    }
+
+.three-columns
 {
-    transition: opacity 3s ease;
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+    text-align: left;
+    display: inline-block;
 }
 
 @media (min-width:320px)
@@ -69,5 +80,10 @@ html, body, #input
     #news
     {
         padding: 3em;
+    }
+
+    .three-columns
+    {
+        width: 50%;
     }
 }
