--- a/style.css
+++ b/style.css
@@ -45,14 +45,11 @@ html, body, #input
 
     #news > div, #chat > div
     {
-        transition: opacity 3s ease;
+        transition: opacity 2s ease;
     }
 
 .three-columns
 {
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
-    column-count: 3;
     text-align: left;
     display: inline-block;
 }
@@ -67,6 +64,15 @@ html, body, #input
     #news
     {
         padding: 0.5em;
+        width:75%;
+    }
+
+    .three-columns
+    {
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+        width: 75%;
     }
 }
 
@@ -80,10 +86,14 @@ html, body, #input
     #news
     {
         padding: 3em;
+        width:50%;
     }
 
     .three-columns
     {
         width: 50%;
+        -moz-column-count: 3;
+        -webkit-column-count: 3;
+        column-count: 3;
     }
 }
