--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html, body, #input
 {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     text-align: right;
 }
 
@@ -43,15 +43,16 @@ html, body, #input
     overflow-y: scroll;
 }
 
-    #news > div, #chat > div
-    {
-        transition: opacity 2s ease;
-    }
-
-.three-columns
+.line
 {
-    text-align: left;
-    display: inline-block;
+	transition: opacity 2s ease;
+	text-align: left;
+}
+
+#chat>.line
+{
+	float:right;
+	clear:both;
 }
 
 @media (min-width:320px)
@@ -61,18 +62,21 @@ html, body, #input
         font-size: 8pt;
     }
 
-    #news
+    #news, #chat
     {
         padding: 0.5em;
-        width:75%;
+    }
+    
+    .line
+    {
+        width: 75%;
     }
 
-    .three-columns
+    .columns
     {
         -moz-column-count: 2;
         -webkit-column-count: 2;
         column-count: 2;
-        width: 75%;
     }
 }
 
@@ -83,15 +87,18 @@ html, body, #input
         font-size: 12pt;
     }
 
-    #news
+    #news, #chat
     {
         padding: 3em;
-        width:50%;
     }
-
-    .three-columns
+    
+    .line
     {
         width: 50%;
+    }
+
+    .columns
+    {
         -moz-column-count: 3;
         -webkit-column-count: 3;
         column-count: 3;
