--- a/style.css
+++ b/style.css
@@ -1,107 +1,28 @@
-*
-{
-    border: 0;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+* {
     box-sizing: border-box;
 }
 
-html, body, #input
-{
+html, body {
     padding: 0;
+}
+
+html, body, #news {
     margin: 0;
-    font-family: "Open Sans", Georgia, sans;
-    font-weight: 400;
-    color: #3e3223;
-    background-color: #b6d6b6;
+    width: 100%;
+    height: 100%;
 }
 
-.fadeIn
-{
-    opacity: 0.0;
-    -webkit-transition: opacity 1s;
-    -moz-transition: opacity 1s;
-    transition: opacity 1s ease;
-}
-
-#input
-{
+#input {
     width: 50%;
     height: 1.5em;
     margin-left: 1em;
 }
 
-#chat
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    text-align: right;
-}
-
-#news, #chat
-{
+#news {
+    padding: 1em;
     overflow-y: scroll;
 }
 
-.line
-{
-    transition: opacity 2s ease;
+.line {
     text-align: left;
-}
-
-#chat>.line
-{
-    float:right;
-    clear:both;
-}
-
-@media (min-width:320px)
-{ /* smartphones, iPhone, portrait 480x320 phones */
-    html, input
-    {
-        font-size: 8pt;
-    }
-
-    #news, #chat
-    {
-        padding: 0.5em;
-    }
-
-    .line
-    {
-        width: 75%;
-    }
-
-    .columns
-    {
-        -moz-column-count: 2;
-        -webkit-column-count: 2;
-        column-count: 2;
-    }
-}
-
-@media (min-width:641px)
-{ /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-    html, input
-    {
-        font-size: 12pt;
-    }
-
-    #news, #chat
-    {
-        padding: 3em;
-    }
-
-    .line
-    {
-        width: 50%;
-    }
-
-    .columns
-    {
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
-        column-count: 3;
-    }
 }
